htts_modify2